Fix for calendar being visible behind month header

--- a/src/app/user/[userId]/calendar/calendar.css
+++ b/src/app/user/[userId]/calendar/calendar.css
@@ -3,6 +3,11 @@
     font-size: 10px;
 }
 
+.fc .fc-multimonth-header {
+    top: -2px !important;
+    border-top: 2px solid #ddd;
+}
+
 .fc .fc-daygrid-day-number {
     font-size: 0.8rem;
     padding: 4px 1px 2px 1px
